Update Jenkinsfile 6